--- a/Decisions_AG.html
+++ b/Decisions_AG.html
@@ -16,10 +16,10 @@
 <p align="center">
 <table>
 <tr class="dataAC">
-<td>&nbsp;&nbsp;(<b><font color="#ff0000">*</font></b>)</td><td>&nbsp;&nbsp;&nbsp;&nbsp;= Convocation à la demande de plus de 20% des copropriétaires</td>
+<td>&nbsp;&nbsp;(<b><font color="#ff0000">*</font></b>)</td><td>&nbsp;&nbsp;&nbsp;&nbsp;= Convocation &agrave; la demande de plus de 20% des copropri&eacute;taires</td>
 </tr>
 <tr class="dataAC">
-<td>&nbsp;&nbsp;(<b><font color="#ff0000">**</font></b>)&nbsp;&nbsp;</td><td>&nbsp;&nbsp;&nbsp;&nbsp;= Convocation par le Président de l'Assemblée générale du 30.04.2013&nbsp;&nbsp;</td>
+<td>&nbsp;&nbsp;(<b><font color="#ff0000">**</font></b>)&nbsp;&nbsp;</td><td>&nbsp;&nbsp;&nbsp;&nbsp;= Convocation par le Pr&eacute;sident de l'Assembl&eacute;e g&eacute;n&eacute;rale du 30.04.2013&nbsp;&nbsp;</td>
 </tr>
 </table>
 
@@ -48,7 +48,7 @@
 </ul>
 
 <hr color="#ff8080" align="left" width="1058">
-<p><img src="Brabanconne_GoogleMap.gif" alt="Vue aérienne de la Brabançonne"  width="140" height="140"><img src="BANNER_Old_BLOG.gif" width="753" height="140" width="753" alt="Le Blog de la Brabançonne"><img src="Brabanconne_GoogleMap.gif" alt="Vue aérienne de la Brabançonne"  width="140" height="140"></p> 
+<p><img src="Brabanconne_GoogleMap.gif" alt="Vue a&eacute;rienne de la Braban&ccedil;onne"  width="140" height="140"><img src="BANNER_Old_BLOG.gif" width="753" height="140" width="753" alt="Le Blog de la Braban&ccedil;onne"><img src="Brabanconne_GoogleMap.gif" alt="Vue a&eacute;rienne de la Braban&ccedil;onne"  width="140" height="140"></p> 
 <hr color="#ff8080" align="left" width="1058">
 
 </body>
